--- a/css/dmaku.css
+++ b/css/dmaku.css
@@ -50,9 +50,9 @@
 
 button {
     border-radius: 20px;
-    border: 1px solid #ff4b2b;
-    background: #f6464a;
-    color: #fff;
+    border: 1px solid #ededed;
+    background: #ededf4;
+    color: #7a023c;
     font-size: 12px;
     font-weight: bold;
     padding: 12px 45px;
