--- a/css/dmaku2.css
+++ b/css/dmaku2.css
@@ -7,7 +7,7 @@
     padding: 40px;
     box-shadow: 0 -15px 30px #7a023c;
     border-radius: 5px;
-    background: linear-gradient(to right, #FF5983, #c1194e);
+    background: linear-gradient(to right, #eea3b6, #e26383);
 }
 
 .admin_login dd {
