--- a/css/dmaku2.css
+++ b/css/dmaku2.css
@@ -5,9 +5,10 @@
     overflow: hidden;
     margin: 20% auto 100px auto;
     padding: 40px;
-    box-shadow: 0 -15px 30px #7a023c;
+    box-shadow: 0 -15px 30px #fff;
     border-radius: 5px;
-    background: linear-gradient(to right, #b81a1a, rgb(153, 7, 153));
+    background-color: rgba(0, 0, 0, .05);
+    /*background: linear-gradient(to right, #5cbdaa, rgb(153, 7, 153));*/
 }
 
 .admin_login dd {
