--- a/css/1.css
+++ b/css/1.css
@@ -4,6 +4,13 @@ html {
     height: 100%
 }
 
+input:-internal-autofill-selected {
+    appearance: menulist-button;
+    background-color: rgba(232, 240, 254, 0.1) !important;
+    background-image: none !important;
+    color: -internal-light-dark(black, white) !important;
+}
+
 body {
     margin: 0;
     font-family: sans-serif
